# home-assistant-controllable

./: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  dev.sh  docker-compose.yml  hacs.json  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  release.yml
config/: configuration.yaml  known_devices.yaml
custom_components/controllable/: __init__.py  config_flow.py  const.py  diagnostics.py  manifest.json  options_flow.py  switch.py  version.py
custom_components/controllable/translations/: de.json  en.json  es.json  fr.json  it.json
tests/: test_init.py  test_switch.py
